--- a/JPAGearSilo/.classpath
+++ b/JPAGearSilo/.classpath
@@ -21,5 +21,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
