added war to gradle and domain to application.properties

--- a/GearSilo/build.gradle
+++ b/GearSilo/build.gradle
@@ -21,8 +21,16 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
 }
 
 test {
 	useJUnitPlatform()
+}
+
+apply plugin: 'war'
+war {
+  enabled = true
+  archiveName = "${baseName}.war"     // Our app name, as defined in settings.gradle
+  destinationDir = file("./")      // project root directory
 }
