--- a/GearSilo/src/main/resources/application.properties
+++ b/GearSilo/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.username=gear
 spring.datasource.password=gear
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jmx.default-domain=GearSiloApplication
+spring.jmx.default-domain=GearSilo
 
 
 
