--- a/GearSilo/src/main/resources/application.properties
+++ b/GearSilo/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jmx.default-domain=GearSilo
 #### LOGGING ####
 ##### Set to WARN for fewer log messages
 logging.level.root=WARN
-logging.level.org.springframework.web=WARN
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type=WARN
 spring.jpa.show-sql=false
